kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page
  namespace: mysite
  labels:
    app: landing-page
    version: main
spec:
  selector:
    matchLabels:
      app: landing-page
      version: main
  template:
    metadata:
      labels:
        app: landing-page
        version: main
    spec:
      containers:
      - name: webstore
        image: bagas25/landing-page:v3
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
