kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysite-service
  namespace: mysite
spec:
  selector:
    app: mysite
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
