kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysite-ingress
  namespace: mysite
spec:
  rules:
  - host: mysite.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mysite-service
            port:
              number: 80
